--- a/myproj/main/static/main/css/main.css
+++ b/myproj/main/static/main/css/main.css
@@ -16,11 +16,15 @@ font-size: 40px;
 }
 main{
 text-align: center;
-
+}
+main p {
+    font-size: 50px;
+    
 }
 a:hover{
-color: aliceblue;
-text-decoration: none;
-font-size: 50px;
-transition: all 6s ease-in-out
-}
+    color: aliceblue;
+    text-decoration: none;
+    font-size: 50px;
+    transition: all 0.1s ease-in-out
+    }
+
