--- a/myproj/main/templates/main/outlayer.html
+++ b/myproj/main/templates/main/outlayer.html
@@ -19,7 +19,7 @@
         <ul>
             <a href="{% url "main" %}">Main</a> <br>
             <a href="{% url "about" %}">About us</a> <br>
-            <a href="">Contacts</a> <br>
+            <a href="{% url "newg" %}">Contacts</a> <br>
         </ul>
     </aside>
     <main>
