--- a/myproj/newg/templates/newg/new_test.html
+++ b/myproj/newg/templates/newg/new_test.html
@@ -1,1 +1,8 @@
-{% extends "main/index.html" %}
+{% extends "main/outlayer.html" %}
+
+
+{% block center  %}
+
+<p>Hello its newg html</p>
+
+{% endblock  %}
