--- a/myproj/main/templates/main/index.html
+++ b/myproj/main/templates/main/index.html
@@ -14,14 +14,16 @@
 
 {% for el in teachers %}
 <li>
-    {{el.name}} 
+    {{el.second_name}} 
 </li>
 {% endfor %}
 
 <h1>Main</h1>
+
 <p>This is my internet web site for my portfolio that is showing my intilect issues for whole world) </p>
 <p>This Django project is made by MaxiSnow123e  </p>
 {{title}}
+<h1>This is a test database insert </h1>
 {% for book in books %}
 <li><strong>{{ book.title }}</strong> — {{ book.author }} ({{ book.published_date }})</li> <br>
 {% endfor %}
